--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/postar"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:onClick="exibir"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.039" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/visualizar"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:onClick="exibir"
