Erro nas credencias ainda continua... 1.0.2 (a API não tem suporte para Android).

--- a/app/src/main/res/layout/cliente.xml
+++ b/app/src/main/res/layout/cliente.xml
@@ -25,8 +25,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/digite_o_que_estiver_pensando"
-             />
+            android:hint="@string/digite_o_que_estiver_pensando" />
 
         <ListView
             android:id="@+id/lista_postagem"
