--- a/app/src/main/res/layout/subscribe_async_example.xml
+++ b/app/src/main/res/layout/subscribe_async_example.xml
@@ -12,8 +12,7 @@
             android:id="@+id/textViewID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/id"
-             />
+            android:hint="@string/id" />
 
         <TextView
             android:id="@+id/textView4"
@@ -24,6 +23,6 @@
             android:id="@+id/textViewMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/message"/>
+            android:hint="@string/message" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
